--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -1,12 +1,13 @@
 html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
+    position: relative;
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 22px;
     font-weight: 300;
     background-color: $cream;
-    overflow-y: hidden;
 }
 
 a {
