--- a/src/scss/main/_main.scss
+++ b/src/scss/main/_main.scss
@@ -1,21 +1,38 @@
-.main {
-  display: block;
-  width: 100%; // ma hauteur
-  height: 150%; // ma largeur
+#container {
+  width: 100vh;
+  height: 100vw;
   position: absolute;
-  top: 0;
-  left: 0;
-  background: #1A1A1A;
-  transform-origin: right top;
-  transform: rotate(-90deg) translateY(-150vh); // mon angle plus mon point de départ
-  overflow-y: auto;
-  z-index: 0; //gérer pour avoir le menu en overlay
+  transform: rotate(270deg) translateX(-100%);
+  transform-origin: top left;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.main .main-el {
-  display: block;
-  padding: 5px;
-  background: #cab;
-  transform: rotate(90deg);
-  transform-origin: right top;
+#container .slide {
+  display: inline-block;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+::-webkit-scrollbar { display: none; }
+::-moz-scrollbar { display: none; }
+
+#container-inner {
+  transform: rotate(90deg) translateY(-100vh);
+  transform-origin: top left;
+  white-space: nowrap;
+  font-size: 0;
+}
+
+.slide-2 {
+  background-color: #49E83E;
+}
+
+.slide-3 {
+  background-color: #EDDE05;
+}
+
+.slide-4 {
+  background-color: #E84B30;
 }
